--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@tanstack/react-table": "^8.21.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.4.7",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.477.0",
+    "migrate-mongo": "^12.1.3",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -36,6 +38,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "22.13.10",
     "@types/react": "19.0.10",
     "@typescript-eslint/eslint-plugin": "^8.27.0",
